# search-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bloomfilter  debug  seedlist.txt
constraint solver/: constraint_solver.h
constraint_solver/: CMakeCache.txt  CMakeLists.txt  Makefile  abstractISR.cpp  abstractISR.h  cmake_install.cmake  constraint_solver.cpp  constraint_solver.h  search_engine  test.cpp  testdoc.txt
constraint_solver/include/: abstractISR.h  constraint_solver.h
constraint_solver/index_test/: thread-0-0.chunk  thread-0-13.dchunk  thread-0-24.chunk  thread-0-28.dchunk  thread-0-metadata.mdata
constraint_solver/src/: abstractISR.cpp  constraint_solver.cpp
constraint_solver/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  constraint_solver.cpp  search_engine  test.cpp
constraint_solver/test_index/: thread-0-0.chunk  thread-0-0.dchunk  thread-0-metadata.mdata
crawler/: Crawler.cpp  Crawler.h  CrawlerManager.cpp  CrawlerManager.h  Frontier.cpp  Frontier.h  LinuxGetSsl.cpp  Makefile  crawler.h  crawlermanager.cpp  crawlermanager.h  parseRobots  parseRobots.cpp  test.txt
crawler/get-url/: GetUrl.cpp  GetUrl.h  LinuxGetSSL  LinuxGetUrl  LinuxGetUrl.cpp
crawler/include/: Crawler.h  CrawlerApp.h  CrawlerManager.h  Frontier.h  FrontierOpt.h  GetUrl.h  HtmlParser.h  HtmlTags.h  LinkManager.h
crawler/parser/: HtmlParser.cpp  HtmlParser.h  HtmlParserDemo.cpp  HtmlTags.cpp  HtmlTags.h  Makefile
crawler/run/: CrawlerStart  CrawlerStart.cpp  DockerStart.sh  Dockerfile  Makefile  bloomfilter  debug  documentCount  seedlist.txt  splitSeeds  splitSeeds.cpp  test.txt  todolist
crawler/src/: Crawler.cpp  CrawlerApp.cpp  CrawlerManager.cpp  Frontier.cpp  FrontierOpt.cpp  GetUrl.cpp  HtmlParser.cpp  HtmlParserDemo.cpp  LinkManager.cpp  backupMake
crawler/test/: FrontierTest  FrontierTest.cpp  M2.out  Makefile  Words.html  bf  bloomfilter  crawlerTest  crawlerTest.cpp  frontierOut.txt  main.cpp  managerTestM1  managerTestM1.cpp  managerTestM2  managerTestM2.cpp  seedM0-0  seen.txt  test.txt  todolist.txt
disk-index/: thread-0-0-metadata.mdata  thread-0-0.dchunk  thread-0-1-metadata.mdata  thread-0-1.chunk  thread-0-1.dchunk  thread-0-10-metadata.mdata  thread-0-10.chunk  thread-0-10.dchunk  thread-0-11-metadata.mdata  thread-0-11.chunk  thread-0-11.dchunk  thread-0-12-metadata.mdata  thread-0-12.chunk  thread-0-12.dchunk  thread-0-13-metadata.mdata  thread-0-15-metadata.mdata  thread-0-16.dchunk  thread-0-17.chunk  thread-0-18-metadata.mdata  thread-0-18.chunk  thread-0-18.dchunk  thread-0-2-metadata.mdata  thread-0-2.chunk  thread-0-2.dchunk  thread-0-3-metadata.mdata  thread-0-3.chunk  thread-0-3.dchunk  thread-0-4-metadata.mdata  thread-0-4.chunk  thread-0-4.dchunk  thread-0-5-metadata.mdata  thread-0-5.chunk  thread-0-5.dchunk  thread-0-6-metadata.mdata  thread-0-6.chunk  thread-0-6.dchunk  thread-0-7-metadata.mdata  thread-0-7.chunk  thread-0-7.dchunk  thread-0-8-metadata.mdata  (+4 more)
index/: CMakeCache.txt  CMakeLists.txt  Dictionary.cpp  Dictionary.h  DictionarySerializer.h  DocumentInfo.cpp  DocumentInfo.h  DocumentsSerializer.h  EndDocSerializer.h  FileManager.cpp  FileManager.h  Global.h  HashTable.h  IPost.cpp  IPost.h  ISR.cpp  ISR.h  Index.h  IndexConstructor.cpp  IndexConstructor.h  Makefile  Post.cpp  Post.h  PostingList.cpp  PostingList.h  PostingListBlob.cpp  PostingListBlob.h  cmake_install.cmake  dictionary.cpp  dictionary.h  global.h  index_validator  main.cpp  params.h  search_engine  test.cpp
index/include/: CommonUtil.h  Dictionary.h  DictionarySerializer.h  DocumentInfo.h  DocumentsSerializer.h  EndDocSerializer.h  FileManager.h  Global.h  HashTable.h  IPost.h  ISR.h  IndexConstructor.h  Post.h  PostingList.h  PostingListBlob.h
index/src/: Dictionary.cpp  Dictionary.cpp.orig  DocumentInfo.cpp  FileManager.cpp  HashTable.cpp  IPost.cpp  ISR.cpp  IndexConstructor.cpp  Post.cpp  PostingList.cpp  PostingListBlob.cpp  astylerc
index/test/: Makefile  indexValidator  indexValidator.cpp  main.cpp  test.cpp
m1/disk-index/: thread-0-0-metadata.mdata
query_compiler/: .gitignore  CMakeCache.txt  Makefile  Tokens.cpp  Tokens.h  Transformation.cpp  cmake_install.cmake  query_Compiler.cpp  query_Compiler.h  query_compiler.cpp  query_compiler.h  test.cpp
query_compiler/include/: Transformation.h  query_Compiler.h
query_compiler/query_compiler/: Transformation.cpp  Transformation.h
query_compiler/src/: Transformation.cpp  query_Compiler.cpp
query_compiler/test/: CMakeLists.txt
ranker/: ISRSpan.cpp  ISRSpan.h  RankerSender.h  ranker.cpp  ranker.h
ranker/include/: ISRSpan.h  RankerManager.h  RankerSender.h  ranker.h
ranker/run/: test.cpp
ranker/src/: ISRSpan.cpp  ranker.cpp
seedlist/: seedM0.txt
server/: LinuxTinyServer.cpp  Results.cpp  Results.h  a.out  out
server/include/: Plugin.h  QueryServer.h  RankServer.h  RankerManager.h  RankerSender.h  Results.h  SearchPlugin.h
server/run/: Dockerfile  LinuxTinyServer  LinuxTinyServer.cpp  Makefile  RankServer  RankServer.cpp  WebServer  WebServer.cpp  debug  index_validator  testCombined  testCombined.cpp  testISRSpan  testISRSpan.cpp  testResults  testResults.cpp  testdoc.txt
server/src/: LinuxTinyServer.cpp  Results.cpp
server/test/: HtmlParserDemo  HtmlParserDemo.cpp  Makefile  debug  output  printRankOutput.txt  queryServerTest  (+10 more)
utility/: BinarySearch.h  BloomFilter.h  Common.h  Concurrency.h  DiskQueue.cpp  DiskQueue.h  HashBlob.cpp  HashBlob.h  HashFile.cpp  HashTable.cpp  HashTable.h  PriorityQueue.h  SmartPointer.h  Thread.h  Timer.h  Vector.h  bitmap.h  diskQueue.cpp  mystring.cpp  mystring.h  string.cpp  string.h  testString  testString.cpp
(+2067 files in other folders)
